# Subsidy-Crawl

./: .gitignore  LICENSE  README.md  cloudflare_bypass.py  main.py  name_organ_url.txt  pyproject.toml  render-build.sh
.github/: dependabot.yml
example/: read_to_sheet.py  write_to_sheet.py
integrations/Docker/: Makefile  README.md
integrations/Selenium/: README.md  crawl_test.py
new_version/: README.md  cloudflare_bypass.py  config.py  crawl_url.py
new_version/example_sheet/: read_to_sheet.py
old_version/: wite_to_db.py
src/: Dockerfile  README.md  config.py  cookie.py  crawl_url.py  db_config.py  difference.py  sheet_config.py  test.sh
